--- a/resume.css
+++ b/resume.css
@@ -58,7 +58,7 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   max-width: 100%;
   position: relative;
   margin: 0;
